maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:4: error: not found: value estSurbiscuit
  while (!estSurbiscuit()) {
          ^RandomMouseMaze:5: error: not found: value a
    a = random3(0,2);
    ^RandomMouseMaze:7: error: not found: value a
      if (a==0) {
          ^