maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
  while (!estSurbiscuit()) {
    a = random3(0,2);
    if (!estFaceMur) {
      if (a==0) {
        right();
      } else {
        left();
      }
    } else {
      forward();
    }
  }
  prendBiscuit();
}